feat: implement Playwright auto-join client and tests
Agent-Logs-Url: https://github.com/zhonglin-h/SchoolManager/sessions/affdbe4a-4ebb-4e5a-a865-38f85ee7e8f6

Co-authored-by: zhonglin-h <51329642+zhonglin-h@users.noreply.github.com>